Got the filter buttons to center on the page by using justify-content:center. Still working on getting the form elements to stay on one line and take up a certain amount of space.

--- a/main.css
+++ b/main.css
@@ -1,3 +1,14 @@
 .classroom-col, .expelled-classroom-col {
   border: 2px solid black;
 }
+
+/* form {
+  border: 2px solid black;
+} */
+.filter-buttons button {
+  width: 10rem;
+}
+.filter-buttons {
+  display: flex;
+  justify-content: center;
+}
