--- a/main.css
+++ b/main.css
@@ -12,3 +12,9 @@
   display: flex;
   justify-content: center;
 }
+
+.render-students-here, .render-expelled-students-here {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
