--- a/main.css
+++ b/main.css
@@ -19,3 +19,9 @@
   flex-direction: column;
   align-items: center;
 }
+
+.form-elements {
+  border: 2px solid;
+  display: flex;
+  align-items: baseline;
+}
