--- a/main.css
+++ b/main.css
@@ -1,3 +1,9 @@
+body {
+  font-family: "PT Sans Narrow", sans-serif;
+  font-weight: 700;
+  font-style: normal;
+}
+
 .classroom-col, .expelled-classroom-col {
   border: 2px solid black;
 }
