--- a/main.css
+++ b/main.css
@@ -22,6 +22,10 @@ body {
   font-size: 2rem;
 }
 
+.form-instructions {
+  font-weight: bold;
+}
+
 .filter-buttons button {
   font-weight: bold;
   font-size: 1.25rem;
