--- a/main.css
+++ b/main.css
@@ -14,6 +14,16 @@ body {
   color: white;
 }
 
+.col-2 label {
+  color: #fff;
+}
+
+#student-name {
+  background-color: #110B11;
+  color: #FCECC9;
+  border: none;
+}
+
 .header, .classroom-col h3, .expelled-classroom-col h3 {
   color: #FCECC9;
 }
@@ -24,6 +34,7 @@ body {
 
 .form-instructions {
   font-weight: bold;
+  color: #fff;
 }
 
 .filter-buttons button {
